# vw

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/buildomat/: config.toml
.github/buildomat/jobs/: build-linux.sh  build.sh
example/: .gitignore  deps.tcl  vhdl_ls.toml  vhdl_ls.toml.bak  vw.toml
example/bench/: broken_tb.vhd  counter_test_tb.vhd  simple_tb.vhd  test_utils.vhd  widget_tb.vhd
example/src/: counter.vhd  widget.vhd  widget_pkg.vhd
src/: main.rs
vw-cli/: Cargo.toml
vw-cli/src/: main.rs
vw-lib/: Cargo.toml
vw-lib/src/: anodizer.rs  lib.rs  mapping.rs  nvc_helpers.rs  vhdl_printer.rs  visitor.rs
vw-lib/src/sim/: bridge.rs  mod.rs  plot.rs
vw-lib/src/sim/bridge_assets/: xyce.rs  xyce_cinterface.cpp
