[package]
name = "vw"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "A VHDL workspace management tool"
repository = "https://github.com/your-username/vw"
keywords = ["vhdl", "workspace", "dependency-management"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
git2 = "0.18"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
dirs = "5.0"
tempfile = "3.0"
colored = "2.0"
vhdl_lang = "0.83"
regex = "1.0"
