[workspace]
resolver = "2"
members = ["vw-lib", "vw-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/your-username/vw"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
dirs = "5.0"
tempfile = "3.0"
regex = "1.0"
