[package]
name = "vw-lib"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for VHDL workspace management"
keywords = ["vhdl", "workspace", "dependency-management"]
categories = ["development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
thiserror.workspace = true
dirs.workspace = true
tempfile.workspace = true
regex.workspace = true
git2 = "0.18"
vhdl_lang = "0.83"
